syntax = "proto3";

package mypackage;

import "google/api/annotations.proto";
option go_package = "github.com/user/pb";

service MyService {
  rpc GetMessage (RequestStruct) returns (ResponseStruct) {
      option (google.api.http) = {
          get: "/v1/getmessage"
        };
    }
}

message RequestStruct {
  string clientType = 1;
}

message ResponseStruct {
  string text = 1;
}